--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -26,54 +26,51 @@
     padding: 0;
     margin: 0;
     li.nav-item{
+
+        
+        
         a.nav-link{
-            
-            .active{
-                &:nth-child(1){
-                        color:white;
-                        background-color: rgba(235, 48, 48, .8);
-                    
-                }
-                &:nth-child(2){
-
-                        color:white;
-                        background-color: rgba(238, 202, 43, .8);
-                    
-                }
-                &:nth-child(3){
-
-                        color:white;
-                        background-color: rgba(48, 235, 64, .8);
-                    
-                }
-                &:nth-child(4){
-
-                        color:white;
-                        background-color: rgba(31, 185, 231, 0.8);
-                }      
-            }
             padding: 30px 15px;
             font-weight: bolder;
+
+
         }
         &:nth-child(1){
+                .active{
+                    color:white;
+                    background-color: rgba(235, 48, 48, .8);
+                }
             &:hover,&:active,&:focus{
                 color:white;
                 background-color: rgba(235, 48, 48, .8);
             }
         }
         &:nth-child(2){
+            .active{
+                color:white;
+                background-color: rgba(238, 202, 43, .8);
+            }
             &:hover,&:active,&:focus{
                 color:white;
                 background-color: rgba(238, 202, 43, .8);
             }
         }
         &:nth-child(3){
-            &:hover,&:active,&:focus{
+            .active{
                 color:white;
                 background-color: rgba(48, 235, 64, .8);
             }
+            &:hover,&:active,&:focus{
+                color:white;
+                background-color: rgba(48, 235, 64, .8);
+                
+            }
         }
         &:nth-child(4){
+            .active{
+                color:white;
+                background-color: rgba(31, 185, 231, .8);
+                }
             &:hover,&:active,&:focus{
                 color:white;
                 background-color: rgba(31, 185, 231, 0.8);
@@ -161,11 +158,12 @@ h2.phead{
     font-size: 20px;
 }
 
-a.btn.btn-primary.btn-lg{
+a.btn.btn-primary{
     padding: 15px 30px;
     width: 250px;
-    background-color: rgba(31, 185, 231, 0.8);
-}
+    background-color: rgba(31, 185, 231, 0.8);}
+
+
 
 
 
